Added GetExecutionContext method to machine state

--- a/src/Brainf_ckSharp/Models/Internal/TuringMachineState2.ExecutionContext.tt
+++ b/src/Brainf_ckSharp/Models/Internal/TuringMachineState2.ExecutionContext.tt
@@ -4,6 +4,7 @@
 #><#@ assembly name="NetStandard"
 #><#@ import namespace="System"
 #><#@ import namespace="Brainf_ckSharp.Enums" #>
+using System;
 using System.Diagnostics.Contracts;
 using System.Runtime.CompilerServices;
 using Brainf_ckSharp.Enums;
@@ -17,6 +18,32 @@ namespace Brainf_ckSharp.Models.Internal
     /// </summary>
     internal sealed unsafe partial class TuringMachineState2
     {
+        /// <summary>
+        /// Gets an execution context of the specified type
+        /// </summary>
+        /// <typeparam name="TExecutionContext">The type of execution context to retrieve</typeparam>
+        /// <returns>An execution context of the specified type</returns>
+        [Pure]
+        public TExecutionContext GetExecutionContext<TExecutionContext>()
+            where TExecutionContext : struct, IMachineStateExecutionContext
+        {
+<#
+foreach (var mode in Enum.GetValues(typeof(OverflowMode)))
+{
+#>
+            if (typeof(TExecutionContext) == typeof(<#=mode#>ExecutionContext))
+            {
+                var executionContext = new <#=mode#>ExecutionContext(Ptr, Size - 1, _Position);
+
+                return Unsafe.As<<#=mode#>ExecutionContext, TExecutionContext>(ref executionContext);
+            }
+
+<#
+}
+#>
+            throw new ArgumentException($"Invalid context type: {typeof(TExecutionContext)}", nameof(TExecutionContext));
+        }
+
 <#
 foreach (var mode in Enum.GetValues(typeof(OverflowMode)))
 {
