Added RLE-enabled execution context overloads

--- a/src/Brainf_ckSharp/Models/Internal/TuringMachineState.ExecutionContext.tt
+++ b/src/Brainf_ckSharp/Models/Internal/TuringMachineState.ExecutionContext.tt
@@ -106,18 +106,22 @@ foreach (var mode in Enum.GetValues(typeof(OverflowMode)))
 
             /// <inheritdoc/>
             [MethodImpl(MethodImplOptions.AggressiveInlining)]
-            public int TryMoveNext(int count)
+            public bool TryMoveNext(int count, ref int totalOperations)
             {
                 if (_Position + count > MaxIndex)
                 {
+                    totalOperations += MaxIndex - _Position;
+
                     _Position = MaxIndex;
 
-                    return MaxIndex - _Position;
+                    return false;
                 }
+
+                totalOperations += count;
 
                 _Position += count;
 
-                return count;
+                return true;
             }
 
             /// <inheritdoc/>
@@ -133,18 +137,22 @@ foreach (var mode in Enum.GetValues(typeof(OverflowMode)))
 
             /// <inheritdoc/>
             [MethodImpl(MethodImplOptions.AggressiveInlining)]
-            public int TryMoveBack(int count)
+            public bool TryMoveBack(int count, ref int totalOperations)
             {
                 if (_Position - count < 0)
                 {
+                    totalOperations += _Position;
+
                     _Position = 0;
 
-                    return _Position;
+                    return false;
                 }
+
+                totalOperations += count;
 
                 _Position -= count;
 
-                return count;
+                return true;
             }
 
             /// <inheritdoc/>
@@ -180,7 +188,7 @@ switch (mode)
 
             /// <inheritdoc/>
             [MethodImpl(MethodImplOptions.AggressiveInlining)]
-            public int TryIncrement(int count)
+            public bool TryIncrement(int count, ref int totalOperations)
             {
                 ushort* current = Ptr + _Position;
 
@@ -193,11 +201,11 @@ switch (mode)
 #>
                 if (*current + count > <#=cellType#>.MaxValue)
                 {
-                    ushort temp = *current;
+                    totalOperations += <#=cellType#>.MaxValue - *current;
 
                     *current = <#=cellType#>.MaxValue;
 
-                    return <#=cellType#>.MaxValue - temp;
+                    return false;
                 }
 
                 *current = unchecked((ushort)(*current + 1));
@@ -213,7 +221,9 @@ switch (mode)
 }
 #>
 
-                return count;
+                totalOperations += count;
+
+                return true;
             }
 
             /// <inheritdoc/>
@@ -249,7 +259,7 @@ switch (mode)
 
             /// <inheritdoc/>
             [MethodImpl(MethodImplOptions.AggressiveInlining)]
-            public int TryDecrement(int count)
+            public bool TryDecrement(int count, ref int totalOperations)
             {
                 ushort* current = Ptr + _Position;
 
@@ -262,11 +272,11 @@ switch (mode)
 #>
                 if (*current < count)
                 {
-                    ushort temp = *current;
+                    totalOperations += *current;
 
                     *current = 0;
 
-                    return temp;
+                    return false;
                 }
 
                 *current = (ushort)(*current - count);
@@ -282,7 +292,9 @@ switch (mode)
 }
 #>
 
-                return count;
+                totalOperations += count;
+
+                return true;
             }
 
             /// <inheritdoc/>
